2nd commit August

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@ CF47-D2-B.exe
 .vscode/tasks.json
 Adhoc-STL/vjudgeC.exe
 Adhoc-STL/vjudgeB.exe
+Dp/combinations.exe
+Adhoc-STL/KuriyamaMirai'sStones.exe
+Adhoc-STL/Fence.exe
+LICENSE
+Number Theory/TDKPRIME - Finding the Kth Prime.exe
