--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ Adhoc-STL/KuriyamaMirai'sStones.exe
 Adhoc-STL/Fence.exe
 LICENSE
 Number Theory/TDKPRIME - Finding the Kth Prime.exe
+Adhoc-STL/B. Hamming Distance Sum.exe
