--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ Adhoc-STL/Fence.exe
 LICENSE
 Number Theory/TDKPRIME - Finding the Kth Prime.exe
 Adhoc-STL/B. Hamming Distance Sum.exe
+Adhoc-STL/B._Gena's_Code.exe
+Adhoc-STL/B._Routine_Problem.exe
