wet shark & vasya

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ Number Theory/TDKPRIME - Finding the Kth Prime.exe
 Adhoc-STL/B. Hamming Distance Sum.exe
 Adhoc-STL/B._Gena's_Code.exe
 Adhoc-STL/B._Routine_Problem.exe
+Adhoc-STL/B. Vasya and Cornfield.exe
+Adhoc-STL/B._Wet_Shark_and_Bishops.exe
